--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 wasm-bindgen = "0.2.84"
 console_error_panic_hook = { version = "0.1.7", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
+rgb = "0.8.36"
+
 [dependencies.web-sys]
 version = "0.3.61"
 features = [
@@ -20,6 +22,7 @@ features = [
   'HtmlCanvasElement',
   'CanvasRenderingContext2d',
   'TextMetrics',
+  "console",
 ]
 
 [features]
